--- a/styles.css
+++ b/styles.css
@@ -84,5 +84,19 @@ body {
     cursor: pointer;
     font-weight: bold;
     transform: skewX(-14deg);
+}
 
+
+#section3 {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+}
+
+#section3 iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
