--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,12 @@ body {
     font-size: 19px;
 }
 
+.container {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+}
+
 #section1 {
     text-align: center;
     padding: 40px 10px;
