--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,8 @@ body {
 
 .headerImage {
     flex-grow: 2;
+    width: 10%;
+    padding: 1% 2% 1% 5%;
 }
 .nav-link {
     padding: 8px;
@@ -57,6 +59,78 @@ body {
 
 .grid {
   display: flex;
+}
+
+@media screen and (max-width: 768px) {
+
+  .line {
+      width: 30px;
+      height: 3px;
+      background: darkorange;
+      margin: 5px;
+  }
+
+  nav {
+      position: relative;
+  }
+
+  .hamburger {
+      position: absolute;
+      cursor: pointer;
+      right: 5%;
+      top: 50%;
+      transform: translate(-5%, -50%);
+      z-index: 3;
+  }
+
+  .headerImage {
+    flex-grow: unset;
+  }
+
+  .nav-Links {
+      position: fixed;
+      background: hsl(0, 0%, 4%);
+      height: 100vh;
+      width: 100%;
+      flex-direction: column;
+      clip-path: circle(0px at 90% -10%);
+      -webkit-clip-path: circle(0px at 90% -10%);
+      transition: all 1s ease-out;
+      pointer-events: none;
+      z-index: 2;
+  }
+  .nav-Links.open {
+      clip-path: circle(1100px at 90% -10%);
+      -webkit-clip-path: circle(1100px at 90% -10%);
+      pointer-events: all;
+  }
+
+  .landing {
+      flex-direction: column;
+  }
+  .nav-Links li {
+      opacity: 0;
+  }
+
+  .nav-Links li a {
+      font-size: 25px;
+  }
+
+  .nav-Links li:nth-child(2){
+      transition: all 0.5s ease 0.2s;
+  }
+  .nav-Links li:nth-child(3){
+      transition: all 0.5s ease 0.4s;
+  }
+  .nav-Links li:nth-child(4){
+      transition: all 0.5s ease 0.6s;
+  }
+  .nav-Links li:nth-child(5){
+      transition: all 0.5s ease 0.8s;
+  }
+  li.fade {
+      opacity: 1;
+  }
 }
 
 
